--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
 <h1>Micah Locke</h1>
+
+<table>
+    <tr>About Me</tr>
+    <tr>My Music</tr>
+    <tr>My Pictures</tr>
+    <tr>My Résumé</tr>
+    <tr>Contact Me</tr>
+</table>
+
+<iframe src="https://open.spotify.com/embed/album/7jfexk2w5aDI25njkN0UGg" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
