Addition of Contact Me

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html>
+
 <h1>Micah Locke</h1>
 
 <table>
@@ -6,8 +8,9 @@
     <tr>My Music</tr>
     <tr>My Pictures</tr>
     <tr>My Résumé</tr>
-    <tr>Contact Me</tr>
+    <tr><a href="pages.contactMe.html"> Contact Me </a></tr>
 </table>
 
 <iframe src="https://open.spotify.com/embed/album/7jfexk2w5aDI25njkN0UGg" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
+</html>
