--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <tr>My Music</tr>
     <tr>My Pictures</tr>
     <tr>My Résumé</tr>
-    <tr><a href="pages.contactMe.html"> Contact Me </a></tr>
+    <tr><a href="pages/contactMe.html"> Contact Me </a></tr>
 </table>
 
 <iframe src="https://open.spotify.com/embed/album/7jfexk2w5aDI25njkN0UGg" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
