--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
+
+<link rel="stylesheet type="text/css" href="css/index.css"> 
+
 <html>
 
 <h1>Micah Locke</h1>
 
 <table>
-    <tr>About Me</tr>
-    <tr>My Music</tr>
-    <tr>My Pictures</tr>
-    <tr>My Résumé</tr>
+    <tr> About Me </tr>
+    <tr> My Music </tr>
+    <tr> My Pictures </tr>
+    <tr> My Résumé </tr>
     <tr><a href="pages/contactMe.html"> Contact Me </a></tr>
 </table>
 
