--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet type="text/css" href="css/index.css"> 
 
 <html>
-
+<a href="pages/logo.html"></a>
 <h1>Micah Locke</h1>
 
 <table>
