Correct Images etc

--- a/pages/contactMe.html
+++ b/pages/contactMe.html
@@ -1,7 +1,7 @@
 <html>
-<a href="pages/logo.html"></a>
-<h2>Contact Information</h2>
+    <head><a href="logo.html"></a></head>
+        <h2>Contact Information</h2>
 
-<a href="https://twitter.com/MicahLocke" target="_blank">Twitter</a>
+            <a href="https://twitter.com/MicahLocke" target="_blank">Twitter</a>
 
 </html>
