--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet type="text/css" href="css/index.css"> 
 
 <html>
@@ -7,13 +7,13 @@
 <h1>Micah Locke</h1>
 
 <table>
-    <tr> About Me </tr>
+    <tr> <a href="pages/aboutMe.html"> About Me </a> </tr>
     <tr> My Music </tr>
-    <tr> My Pictures </tr>
+    <tr> <a href="pages/myPictures.html"> My Pictures </a> </tr>
     <tr> My Résumé </tr>
     <tr><a href="pages/contactMe.html"> Contact Me </a></tr>
 </table>
 
-<iframe src="https://open.spotify.com/embed/album/7jfexk2w5aDI25njkN0UGg" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe src="https://open.spotify.com/embed/album/4PIVdqvL1Rc7T7Vfsr8n8Q" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 </html>
