--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet type="text/css" href="css/index.css"> 
 
 <html>
-<a href="pages/logo.html"></a>
-<h1>Micah Locke</h1>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head><link rel="stylesheet" href="css/index.css"></head> 
+<body>
+<!--#include virtual="pages/logo.html"-->
 <table>
     <tr> <a href="pages/aboutMe.html"> About Me </a> </tr>
     <tr> My Music </tr>
     <tr> <a href="pages/myPictures.html"> My Pictures </a> </tr>
-    <tr> My Résumé </tr>
+    <tr> <a href="pages/myResume.html"> My Résumé </a> </tr>
     <tr><a href="pages/contactMe.html"> Contact Me </a></tr>
 </table>
 
-<iframe src="https://open.spotify.com/embed/album/4PIVdqvL1Rc7T7Vfsr8n8Q" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe src="https://open.spotify.com/embed/user/spotify/playlist/37i9dQZF1EjvSUkHw09NgY" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+</body>
 
 </html>
