--- a/pages/logo.html
+++ b/pages/logo.html
@@ -1,5 +1,6 @@
 <html>
-<img src="../images/logo.jpg"
-			  alt="Micah"
-			  width="420" height="69">
+<!--1F05FF is logo color-->
+    <a href="../index.html"> <img src="../images/logo.png"
+			                             alt="Micah"
+                                         width="406" height="29"> </a>
 </html>
