--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
 <head><link rel="stylesheet" href="css/index.css"></head> 
 <body>
 <!--#include virtual="pages/logo.html"-->
-<table>
-    <tr> <a href="pages/aboutMe.html"> About Me </a> </tr>
-    <tr> My Music </tr>
-    <tr> <a href="pages/myPictures.html"> My Pictures </a> </tr>
-    <tr> <a href="pages/myResume.html"> My Résumé </a> </tr>
-    <tr><a href="pages/contactMe.html"> Contact Me </a></tr>
-</table>
+<!--#include virtual="pages/navigation.html"-->
 
 <iframe src="https://open.spotify.com/embed/user/spotify/playlist/37i9dQZF1EjvSUkHw09NgY" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
