PHP Inlucde Test

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head><link rel="stylesheet" href="css/index.css"></head> 
-<body>
-<!--#include virtual="pages/logo.html"-->
-<!--#include virtual="pages/navigation.html"-->
 
-<iframe src="https://open.spotify.com/embed/user/spotify/playlist/37i9dQZF1EjvSUkHw09NgY" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<body>
+<!--#include virtual="pages/navigation.html"-->
+    <p>Thank you for visiting my page</p>
 
 </body>
 
+<?php include 'pages/footer.php';?>
+    
 </html>
