--- a/pages/navigation.html
+++ b/pages/navigation.html
@@ -1,6 +1,6 @@
 <table>
     <tr> <a href="pages/aboutMe.html"> About Me </a> </tr>
-    <tr> My Music </tr>
+    <tr> <a href="pages/myMusic.html"> My Music </a> </tr>
     <tr> <a href="pages/myPictures.html"> My Pictures </a> </tr>
     <tr> <a href="pages/myResume.html"> My Résumé </a> </tr>
     <tr><a href="pages/contactMe.html"> Contact Me </a></tr>
