html include test

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 <body>
 <!--#include virtual="pages/navigation.html"-->
+<div w3-include-html="pages/navigation.html"></div>
+<div w3-include-html="pages/logo.html"></div>    
     <p>Thank you for visiting my page</p>
 
 </body>
