--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <body>
 <!--#include virtual="pages/navigation.html"-->
-<div w3-include-html="pages/navigation.html"></div>
-<div w3-include-html="pages/logo.html"></div>    
+<div w3-include-html="micahlocke.github.io/pages/navigation.html"></div>
+<div w3-include-html="pages/logo.html"> Nice </div>    
     <p>Thank you for visiting my page</p>
 
 </body>
