--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head><link rel="stylesheet" href="css/index.css"></head> 
 
-<body>
-<!--#include virtual="pages/navigation.html"-->
-<div w3-include-html="micahlocke.github.io/pages/navigation.html"></div>
-<div w3-include-html="pages/logo.html"> Nice </div>    
+    <h1>
+        <!--1F05FF is logo color-->
+        <a href="../index.html"> <img src="../images/logo.png"
+			                             alt="Micah"
+                                         width="406" height="29"> </a>
+
+    </h1>    
+<table>
+    <tr> <a href="pages/aboutMe.html"> About Me </a> </tr>
+    <tr> <a href="pages/myMusic.html"> My Music </a> </tr>
+    <tr> <a href="pages/myPictures.html"> My Pictures </a> </tr>
+    <tr> <a href="pages/myResume.html"> My Résumé </a> </tr>
+    <tr><a href="pages/contactMe.html"> Contact Me </a></tr>
+</table>
+
+    <body>
+
     <p>Thank you for visiting my page</p>
 
-</body>
+    </body>
 
 <?php include 'pages/footer.php';?>
     
