--- a/pages/logo.html
+++ b/pages/logo.html
@@ -1,6 +1,6 @@
 <html>
 <!--1F05FF is logo color-->
-    <a href="../index.html"> <img src="../images/logo.png"
+    <a href="../index.html"> <img src="images/logo.png"
 			                             alt="Micah"
                                          width="406" height="29"> </a>
 </html>
