--- a/pages/myResume.html
+++ b/pages/myResume.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <h2> My Résumé </h2>
-    <body>
-        <a href="../files/Micah%20Locke%20Resume%202018.pdf" download="MicahLockeResume"> Download </a>
-        <div class= "container">
-            <embed src="../files/Micah%20Locke%20Resume%202018.pdf" type="application/pdf" width="100%" height="600px" />
-        </div>
-    </body>
+<h2> My Résumé </h2>
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+<body>
+  <a href="../files/Micah%20Locke%20Resume%202019.pdf" download="MicahLockeResume"><button type="button" class="btn btn-outline-danger"><i class="far fa-file-pdf"></i> Download</button></a>
+  <a href="../files/Micah%20Locke%20Resume%202019.docx" download="MicahLockeResume"><button type="button" class="btn btn-outline-primary"><i class="fab fa-microsoft"></i></i> Download</button></a>
+  <div class="container">
+    <embed src="../files/Micah%20Locke%20Resume%202019.pdf" type="application/pdf" width="100%" height="600px" />
+  </div>
+</body>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js" integrity="sha384-7aThvCh9TypR7fIc2HV4O/nFMVCBwyIUKL8XCtKE+8xgCgl/PQGuFsvShjr74PBp" crossorigin="anonymous"></script>
+
 </html>
