--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <!-- Just an image -->
     <nav class="navbar navbar-dark bg-warning">
       <a class="navbar-brand" href="../index.html">
-        <img src="images/logo.png" width="413" height="30" alt="">
+        <!-- <img src="images/logo.png" width="413" height="30", alt="Logo"> -->
+      <picture>
+        <source media="(min-width: 900px)" srcset="images/logo.png">
+        <source media="(min-width: 480px)" srcset="images/logoM.png">
+        <img src="images/logo.png" alt="Logo">
+      </picture>
       </a>
     </nav>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
