--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- <img src="images/logo.png" width="413" height="30", alt="Logo"> -->
       <picture>
         <source media="(min-width: 900px)" srcset="images/logo.png">
-        <source media="(min-width: 480px)" srcset="images/logoM.png">
+        <source media="(min-width: 200px)" srcset="images/logoM.png">
         <img src="images/logo.png" alt="Logo">
       </picture>
       </a>
@@ -65,7 +65,7 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active">
-          <img class="carousel-pictures" src="images/MicahAboutMe.jpg" alt="...">
+          <img class="carousel-pictures" src="images/MicahAboutMe.jpg" alt="About Me">
           <div class="container">
             <div class="carousel-caption text-left">
               <h1>About Me</h1>
@@ -76,7 +76,7 @@
         </div>
 
         <div class="carousel-item">
-          <img class="carousel-pictures" src="images/OlympiaNationalPark.jpg" alt="...">
+          <img class="carousel-pictures" src="images/OlympiaNationalPark.jpg" alt="Pictures">
           <div class="container">
             <div class="carousel-caption">
               <h1>My Pictures</h1>
@@ -87,14 +87,12 @@
         </div>
 
         <div class="carousel-item">
-          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
-            <rect width="100%" height="100%" fill="#ffc107"></rect>
-          </svg>
+          <img class="carousel-pictures" src="images/myHobbies.jpg" alt="Hobbies">
           <div class="container">
             <div class="carousel-caption text-right">
-              <h1>One more for good measure.</h1>
+              <h1>My Hobbies</h1>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <p><a class="btn btn-lg btn-light" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
         </div>
@@ -120,8 +118,8 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-primary">Edit</button>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
