--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="pages/aboutMe.html">About Me</a>
         </li>
         <li class="nav-item active">
