--- a/pages/myResume.html
+++ b/pages/myResume.html
@@ -28,19 +28,19 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="pages/aboutMe.html">About Me</a>
+        <a class="nav-link" href="aboutMe.html">About Me</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="pages/myMusic.html">My Hobbies</a>
+        <a class="nav-link" href="myMusic.html">My Hobbies</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="pages/myPictures.html">My Pictures</a>
+        <a class="nav-link" href="myPictures.html">My Pictures</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="pages/myResume.html">My Résumé</a>
+        <a class="nav-link" href="myResume.html">My Résumé</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="pages/contactMe.html">Contact Me</a>
+        <a class="nav-link" href="contactMe.html">Contact Me</a>
       </li>
     </ul>
   </div>
