--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Scada:400i" rel="stylesheet">
 
+  <!-- Font Awesome -->
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
@@ -23,7 +27,7 @@
         <!-- <img src="images/logo.png" width="413" height="30", alt="Logo"> -->
       <picture>
         <source media="(min-width: 900px)" srcset="images/logo.png">
-        <source media="(min-width: 200px)" srcset="images/logoM.png">
+        <source media="(min-width: 100px)" srcset="images/logoM.png">
         <img src="images/logo.png" alt="Logo">
       </picture>
       </a>
@@ -37,7 +41,7 @@
           <a class="nav-link" href="pages/aboutMe.html">About Me</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="pages/myMusic.html">My Hobbies</a>
+          <a class="nav-link" href="pages/myHobbies.html">My Hobbies</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="pages/myPictures.html">My Pictures</a>
@@ -73,7 +77,7 @@
             <div class="carousel-caption text-left">
               <h1>About Me</h1>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <p><a class="btn btn-lg btn-primary" href="pages/aboutMe.html" role="button">Read</a></p>
             </div>
           </div>
         </div>
@@ -84,7 +88,7 @@
             <div class="carousel-caption">
               <h1>My Pictures</h1>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <p><a class="btn btn-lg btn-primary" href="pages/myPictures.html" role="button">View Gallery</a></p>
             </div>
           </div>
         </div>
@@ -95,7 +99,7 @@
             <div class="carousel-caption text-right">
               <h1>My Hobbies</h1>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-light" href="#" role="button">Browse gallery</a></p>
+              <p><a class="btn btn-lg btn-light" href="pages/myHobbies.html" role="button">View</a></p>
             </div>
           </div>
         </div>
@@ -118,13 +122,11 @@
             <div class="card mb-4 shadow-sm">
               <img class="featurette-pictures" src="images/2018topsongs.jpg" alt="2018 Top Songs">
               <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">Click the link below to see my 100 most listened to songs of 2018 on Spotify.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-primary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-primary">Edit</button>
+                    <a class="btn btn-sm btn-outline-success" href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1EjvSUkHw09NgY?si=zvMAYxWsQMO_85N6L6vF2A" target="_blank" role="button"><i class="fab fa-spotify"></i> Top 100 Songs of 2018</a>
                   </div>
-                  <small class="text-muted">9 mins</small>
                 </div>
               </div>
             </div>
