--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active">
-          <img class="carousel-pictures img-fluid" src="images/MicahAboutMe.jpg" alt="About Me">
+          <img class="carousel-pictures" src="images/MicahAboutMe.jpg" alt="About Me">
           <div class="container">
             <div class="carousel-caption text-left">
               <h1>About Me</h1>
@@ -86,7 +86,7 @@
         </div>
 
         <div class="carousel-item">
-          <img class="carousel-pictures img-fluid" src="images/OlympiaNationalPark.jpg" alt="Pictures">
+          <img class="carousel-pictures" src="images/OlympiaNationalPark.jpg" alt="Pictures">
           <div class="container">
             <div class="carousel-caption">
               <h1>My Pictures</h1>
@@ -97,7 +97,7 @@
         </div>
 
         <div class="carousel-item">
-          <img class="carousel-pictures img-fluid" src="images/hobbies.jpg" alt="Hobbies">
+          <img class="carousel-pictures" src="images/hobbies.jpg" alt="Hobbies">
           <div class="container">
             <div class="carousel-caption text-right">
               <h1>My Hobbies</h1>
