Carousel Description Changes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="container">
             <div class="carousel-caption text-left">
               <h1>About Me</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p>Learn about me with a brief summary of my life and accomplishments.</p>
               <p><a class="btn btn-lg btn-primary" href="pages/aboutMe.html" role="button">Read</a></p>
             </div>
           </div>
@@ -90,7 +90,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>My Pictures</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p>Look at some of my favorite pictures I have taken.</p>
               <p><a class="btn btn-lg btn-primary" href="pages/myPictures.html" role="button">View Gallery</a></p>
             </div>
           </div>
@@ -101,7 +101,7 @@
           <div class="container">
             <div class="carousel-caption text-right">
               <h1>My Hobbies</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p>Take a look at my favorite hobbies ranging many different activities.</p>
               <p><a class="btn btn-lg btn-primary" href="pages/myHobbies.html" role="button">Explore</a></p>
             </div>
           </div>
