--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">What I'm Listening To Now <span class="text-muted"><br>Tame Impala - Lonerism</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">An older album, but for me it's an excellent album while working because of my familiarity with it and the way it keeps me focused and energized. Highly recommended album for any fan of music. </p>
         </div>
         <div class="col-md-5">
           <img class="img-fluid" src="images/lonerism.jpg" alt="Tame Impala - Lonerism">
@@ -194,7 +194,7 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading">What I'm Playing Now <span class="text-muted"><br>Battlefield V</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">This game plays exactly like any other Battlefield game for better or for worse. The battle royale mode, while not groundbreaking in any way, is the best looking battle royale by far and is still very fun.</p>
         </div>
         <div class="col-md-5 order-md-1">
           <img class="img-fluid" src="images/battlefield.jpg" alt="Battlefield V">
@@ -206,7 +206,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">What I'm Watching <span class="text-muted"><br>True Detective: Season 3</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">No, it doesn't reach the heights of the first season, but I'm not sure any season possibly could. This season still manages to tell an engaging story of Wayne Hays through three different stages of his life.</p>
         </div>
         <div class="col-md-5">
           <img class="img-fluid" src="images/trueDetective.jpg" alt="True Detective: Season 3">
