--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div class="card mb-4 shadow-sm">
             <img class="featurette-pictures img-fluid" src="images/resume.jpg" alt="Resume">
             <div class="card-body">
-              <p class="card-text">Click the links below to download my résumé as a Word doc or PDF.</p>
+              <p class="card-text">Click the links below to download my résumé as a PDF or Word doc.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="files/Micah%20Locke%20Resume%202019.pdf" download="MicahLockeResume"><button type="button" class="btn btn-sm btn-outline-danger"><i class="far fa-file-pdf"></i> Download</button></a>
