--- a/pages/myPictures.html
+++ b/pages/myPictures.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html>
 
-    <body>
-    <h2>My Pictures</h2>
+<link rel="stylesheet" href="../css/bootstrap.css">
+<link rel="stylesheet" href="../css/index.css">
 
-    
-    </body>
+<!-- The grid: four columns -->
+<div class="row">
+  <div class="column">
+    <img src="../images/mypictures/rock.jpg" class="img-fluid" alt="Rock Hole" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="../images/mypictures/canyon.jpg" class="img-fluid" alt="Canyonlands" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="../images/mypictures/cactus.jpg" class="img-fluid" alt="Cactus" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="../images/mypictures/climb.jpg" class="img-fluid" alt="Rock Climbing" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="../images/mypictures/path.jpg" class="img-fluid" alt="Motorcycle Path" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="../images/mypictures/lizard.jpg" class="img-fluid" alt="Lizard" onclick="myFunction(this);">
+  </div>
+</div>
+
+
+<!-- The expanding image container -->
+<div class="container">
+  <!-- Close the image -->
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+
+  <!-- Expanded image -->
+  <img id="expandedImg" style="width:100%">
+
+  <!-- Image text -->
+  <div id="imgtext"></div>
+</div>
+
+<script>
+function myFunction(imgs) {
+  // Get the expanded image
+  var expandImg = document.getElementById("expandedImg");
+  // Get the image text
+  var imgText = document.getElementById("imgtext");
+  // Use the same src in the expanded image as the image being clicked on from the grid
+  expandImg.src = imgs.src;
+  // Use the value of the alt attribute of the clickable image as text inside the expanded image
+  imgText.innerHTML = imgs.alt;
+  // Show the container element (hidden with CSS)
+  expandImg.parentElement.style.display = "block";
+}
+</script>
 
     <footer class="container">
       <p class="float-right"><a href="#">Back to top</a></p>
