--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-warning">
     <!-- Just an image -->
     <nav class="navbar navbar-dark bg-warning">
-      <a class="navbar-brand" href="../index.html">
+      <a class="navbar-brand" href="index.html">
         <!-- <img src="images/logo.png" width="413" height="30", alt="Logo"> -->
         <picture>
           <source media="(min-width: 900px)" srcset="images/logo.png">
