--- a/pages/myPictures.html
+++ b/pages/myPictures.html
@@ -2,7 +2,7 @@
 <html>
 
 <link rel="stylesheet" href="../css/bootstrap.css">
-<link rel="stylesheet" href="../css/index.css">
+<link rel="stylesheet" href="../css/myPictures.css">
 
 <!-- The grid: four columns -->
 <div class="row">
