--- a/pages/myPictures.html
+++ b/pages/myPictures.html
@@ -1,8 +1,71 @@
 <!DOCTYPE html>
 <html>
 
-<link rel="stylesheet" href="../css/bootstrap.css">
-<link rel="stylesheet" href="../css/myPictures.css">
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Freebie: 4 Bootstrap Gallery Templates</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
+    <link rel="stylesheet" href="../css/myPictures.css">
+
+
+</head>
+<body>
+
+<div class="container gallery-container">
+
+    <div class="tz-gallery">
+
+        <div class="row">
+
+            <div class="col-sm-12 col-md-4">
+                <a class="lightbox" href="../images/mypictures/rock.jpg">
+                    <img src="../images/mypictures/rock.jpg" alt="Rock Hole">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="../images/mypictures/canyon.jpg">
+                    <img src="../images/mypictures/canyon.jpg" alt="Canyonlands">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="../images/mypictures/cactus.jpg">
+                    <img src="../images/mypictures/cactus.jpg" alt="Cactus">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-8">
+                <a class="lightbox" href="../images/mypictures/climb.jpg">
+                    <img src="../images/mypictures/climb.jpg" alt="Rock Climbing">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="../images/mypictures/path.jpg">
+                    <img src="../images/mypictures/path.jpg" alt="Motorcycle Path">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="../images/mypictures/lizard.jpg">
+                    <img src="../images/mypictures/lizard.jpg" alt="Lizard">
+                </a>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
+<script>
+    baguetteBox.run('.tz-gallery');
+</script>
+</body>
 
 <!-- The grid: four columns -->
 <div class="row">
@@ -25,38 +88,5 @@
     <img src="../images/mypictures/lizard.jpg" class="img-fluid" alt="Lizard" onclick="myFunction(this);">
   </div>
 </div>
-
-
-<!-- The expanding image container -->
-<div class="container">
-  <!-- Close the image -->
-  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-
-  <!-- Expanded image -->
-  <img id="expandedImg" style="width:100%">
-
-  <!-- Image text -->
-  <div id="imgtext"></div>
-</div>
-
-<script>
-function myFunction(imgs) {
-  // Get the expanded image
-  var expandImg = document.getElementById("expandedImg");
-  // Get the image text
-  var imgText = document.getElementById("imgtext");
-  // Use the same src in the expanded image as the image being clicked on from the grid
-  expandImg.src = imgs.src;
-  // Use the value of the alt attribute of the clickable image as text inside the expanded image
-  imgText.innerHTML = imgs.alt;
-  // Show the container element (hidden with CSS)
-  expandImg.parentElement.style.display = "block";
-}
-</script>
-
-    <footer class="container">
-      <p class="float-right"><a href="#">Back to top</a></p>
-      <p>© Micah Locke · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-    </footer>
 
 </html>
