Image Page Additions

--- a/pages/myPictures.html
+++ b/pages/myPictures.html
@@ -22,36 +22,98 @@
 
     <div class="tz-gallery">
 
+      <h1>Moab, Utah</h1>
+
         <div class="row">
 
             <div class="col-sm-12 col-md-4">
-                <a class="lightbox" href="../images/mypictures/rock.jpg">
-                    <img src="../images/mypictures/rock.jpg" alt="Rock Hole">
+                <a class="lightbox" href="../images/utah/road.jpg">
+                    <img src="../images/utah/road.jpg" alt="Road">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <a class="lightbox" href="../images/utah/bike.jpg">
+                    <img src="../images/utah/bike.jpg" alt="Bike">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <a class="lightbox" href="../images/utah/bikes.jpg">
+                    <img src="../images/utah/bikes.jpg" alt="Bikes">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="../images/mypictures/canyon.jpg">
-                    <img src="../images/mypictures/canyon.jpg" alt="Canyonlands">
+                <a class="lightbox" href="../images/utah/path.jpg">
+                    <img src="../images/utah/path.jpg" alt="Motorcycle Path">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="../images/mypictures/cactus.jpg">
-                    <img src="../images/mypictures/cactus.jpg" alt="Cactus">
+                <a class="lightbox" href="../images/utah/trail.jpg">
+                    <img src="../images/utah/trail.jpg" alt="Motorcycle Trail">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="../images/utah/mounds.jpg">
+                    <img src="../images/utah/mounds.jpg" alt="Mounds">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="../images/utah/valley.jpg">
+                    <img src="../images/utah/valley.jpg" alt="Valley">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="../images/utah/valleymountains.jpg">
+                    <img src="../images/utah/valleymountains.jpg" alt="Valley Mountains">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="../images/utah/canyon.jpg">
+                    <img src="../images/utah/canyon.jpg" alt="Canyonlands">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="../images/utah/canyonlandspan.jpg">
+                    <img src="../images/utah/canyonlandspan.jpg" alt="CanyonlandsPan">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="../images/utah/canyonlands2.jpg">
+                    <img src="../images/utah/canyonlands2.jpg" alt="Canyonlands">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <a class="lightbox" href="../images/utah/rock.jpg">
+                    <img src="../images/utah/rock.jpg" alt="Rock Hole">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <a class="lightbox" href="../images/utah/grandarch.jpg">
+                    <img src="../images/utah/grandarch.jpg" alt="Grand Arch">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <a class="lightbox" href="../images/utah/arch.jpg">
+                    <img src="../images/utah/arch.jpg" alt="Arch">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="../images/utah/cactus.jpg">
+                    <img src="../images/utah/cactus.jpg" alt="Cactus">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="../images/mypictures/climb.jpg">
-                    <img src="../images/mypictures/climb.jpg" alt="Rock Climbing">
+                <a class="lightbox" href="../images/utah/climb.jpg">
+                    <img src="../images/utah/climb.jpg" alt="Rock Climbing">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="../images/mypictures/path.jpg">
-                    <img src="../images/mypictures/path.jpg" alt="Motorcycle Path">
+                <a class="lightbox" href="../images/utah/lizard.jpg">
+                    <img src="../images/utah/lizard.jpg" alt="Lizard">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="../images/mypictures/lizard.jpg">
-                    <img src="../images/mypictures/lizard.jpg" alt="Lizard">
+                <a class="lightbox" href="../images/utah/overlook.jpg">
+                    <img src="../images/utah/overlook.jpg" alt="Overlook">
                 </a>
             </div>
 
@@ -66,27 +128,5 @@
     baguetteBox.run('.tz-gallery');
 </script>
 </body>
-
-<!-- The grid: four columns -->
-<div class="row">
-  <div class="column">
-    <img src="../images/mypictures/rock.jpg" class="img-fluid" alt="Rock Hole" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="../images/mypictures/canyon.jpg" class="img-fluid" alt="Canyonlands" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="../images/mypictures/cactus.jpg" class="img-fluid" alt="Cactus" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="../images/mypictures/climb.jpg" class="img-fluid" alt="Rock Climbing" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="../images/mypictures/path.jpg" class="img-fluid" alt="Motorcycle Path" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="../images/mypictures/lizard.jpg" class="img-fluid" alt="Lizard" onclick="myFunction(this);">
-  </div>
-</div>
 
 </html>
