Index and Nav change

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav float-right">
         <li class="nav-item active">
           <a class="nav-link" href="pages/aboutMe.html">About Me</a>
         </li>
@@ -181,11 +181,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">What I'm Listening To Now <span class="text-muted"><br>Tame Impala - Lonerism</span></h2>
-          <p class="lead">An older album, but for me it's an excellent album while working because of my familiarity with it and the way it keeps me focused and energized. Highly recommended album for any fan of music. </p>
+          <h2 class="featurette-heading">What I'm Listening To Now <span class="text-muted"><br>Tyler the Creator - Igor</span></h2>
+          <p class="lead">My favorite album of the year so far, this album has been endlessly replayable for me. While the lyrics are about a sad subject, its so hard to not have fun listening to it. The variance of Trap-style bass, emotional melodies, features, and more keep me constantly coming back.</p>
         </div>
         <div class="col-md-5">
-          <img class="img-fluid" src="images/lonerism.jpg" alt="Tame Impala - Lonerism">
+          <img class="img-fluid" src="images/igor.jpg" alt="Tyler the Creator - Igor">
         </div>
       </div>
 
