ContactMe page update

--- a/pages/contactMe.html
+++ b/pages/contactMe.html
@@ -1,7 +1,21 @@
+<!doctype html>
 <html>
-    <head><a href="logo.html"></a></head>
-        <h2>Contact Information</h2>
 
-            <a href="https://twitter.com/MicahLocke" target="_blank">Twitter</a>
+<!-- Font Awesome -->
 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+  <body>
+    <h1>Contact Me</h1>
+    <p>Email: micahlocke1@gmail.com <br>
+      Phone: 719-650-6583 <br><br>
+      Social Media<br>
+    <span style="font-size: 3em; color: #1D85CB;">
+      <i class="fab fa-linkedin"></i>
+    </span>
+    <span style="font-size: 3em; color: red;">
+      <i class="fab fa-instagram"></i>
+    </span>
+    </p>
+  </body>
 </html>
