--- a/pages/contactMe.html
+++ b/pages/contactMe.html
@@ -5,17 +5,23 @@
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
-  <body>
-    <h1>Contact Me</h1>
-    <p>Email: micahlocke1@gmail.com <br>
-      Phone: 719-650-6583 <br><br>
-      Social Media<br>
-    <span style="font-size: 3em; color: #1D85CB;">
-      <i class="fab fa-linkedin"></i>
-    </span>
-    <span style="font-size: 3em; color: red;">
-      <i class="fab fa-instagram"></i>
-    </span>
-    </p>
-  </body>
+<body>
+  <h1>Contact Me</h1>
+  <p>Email: micahlocke1@gmail.com <br>
+    Phone: 719-650-6583 <br><br>
+    Social Media<br>
+    <a class="mediaIcon" href="https://www.linkedin.com/in/micahlocke/" target="_blank">
+      <span style="font-size: 3em; color: #1D85CB;">
+        <i class="fab fa-linkedin"></i>
+      </span>
+    </a>
+
+    <a class="mediaIcon" href="https://www.instagram.com/micahlocke_/" target="_blank">
+      <span style="font-size: 3em; color: red;">
+        <i class="fab fa-instagram"></i>
+      </span>
+    </a>
+  </p>
+</body>
+
 </html>
